add columns, pics, and cascading style
co-authored-by: Kai Kohlsdorf <kai.w.kohlsdorf@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <title>Animal Shelter</title>
 </head>
 <body>
-  
+  <div class="header"><h1>Animal Shelter</h1></div>
+  <div class="cats">
+  <h2>Cats</h2>
+  <p>Henri</p>
+  <img src="img/henri.png" alt="photo of Henri in a box">
+  <p>Henri is small and feisty. She takes a while to warm up but once she does she love to cuddle and have attention.</p>
+  </div>
+  <div class="dogs">
+  <h2>Dogs</h2>
+  <p>Tucker</p>
+  <img src="img/Screen Shot 2022-05-26 at 9.50.04 AM.png" alt="Photo of tucker in car">
+  <p>Tucker loves to run and has beautiful brown eyes. He will quickly become the most popular dog at the dogpark.</p>
+  </div>
+  <div class="tinythings">
+  <h2>Tiny Things (Small Animals)</h2>
+  <p>Hedgehog Quincy</p>
+  <img src="img/hedgehog.jpeg" alt="photo of Quincy">
+  <p>Quincy is small and pokey but is lots of fun to have around. Quincy does all the normal hedgehog things with aplomb.</p>
+  </div>
 </body>
 </html>
